text align fix

--- a/css/extra.css
+++ b/css/extra.css
@@ -2,10 +2,6 @@
     padding-bottom: 4.5em;
 }
 
-.container {
-    text-align: center;
-}
-
 @media (max-width : 550px) {
     .progress {
         margin: 1em;
